// Copyright 2022 Namespace Labs Inc; All rights reserved.
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.

syntax = "proto3";

package foundation.internal.codegen.genpackage;

option go_package = "namespacelabs.dev/foundation/internal/codegen/genpackage";

import "schema/node.proto";
import "internal/codegen/protos/filedescset.proto";

message OpGenNode {
    foundation.schema.Node                                      node   = 1;
    foundation.workspace.source.protos.FileDescriptorSetAndDeps protos = 2;
}